[Mac] Pass YES to activateIgnoringOtherApps: to actually activate Chrome.

Passing NO doesn't activate our app in most cases; it seems to be mainly
useful when an app is launched (so there may be a long delay before it's
ready to become active) but the user might have switched to another app
in the mean time. In that case, the activation isn't the immediate
result of a user gesture, so it shouldn't steal focus.

This is a recent regression from crrev.com/2386343004.

BUG=654441,653483,650845

Review-Url: https://codereview.chromium.org/2409623002
Cr-Commit-Position: refs/heads/master@{#424182}

Former-commit-id: d694190ff0e1e1d594ccd644f807a1309ee61d5e